[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartzone-exporter"
version = "1.0.0"
description = "Prometheus metrics exporter for Ruckus SmartZone appliances"
authors = [
    { name = "Dave DeRicco" },
]
license = { text = "MIT" }
requires-python = ">=3.6,<4.0"
dependencies = [
    "prometheus-client>=0.5.0",
    "requests>=2.21.0",
    "urllib3>=1.24.3"
]
readme = "README.md"
keywords = [
    "ruckus", 
    "smartzone", 
    "prometheus", 
    "exporter"
]

[tool.ruff]
select = ["E", "W", "N", "F"]
ignore = []

line-length = 120

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
