[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smartzone-exporter"
version = "1.1.0"
description = "Prometheus metrics exporter for Ruckus SmartZone appliances"
authors = [
    { name = "Bill St.Denis" },
    { name = "Dave DeRicco" },
]
license = { text = "MIT" }
requires-python = ">=3.6,<4.0"
dependencies = [
    "prometheus-client>=0.5.0",
    "requests>=2.21.0"
]
readme = "README.md"
keywords = [
    "ruckus", 
    "smartzone", 
    "prometheus", 
    "exporter"
]

[project.optional-dependencies]
lint = [
    "ruff"
]

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[project.urls]
Repository = "https://github.com/gcet-net/smartzone-exporter.git"
Changelog = "https://github.com/gcet-net/smartzone-exporter/blob/main/CHANGELOG.md"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "RUF", # ruff-specific rules
]
ignore = []
fixable = ["ALL"]
unfixable = []
